add convenience method for display label retrieval